--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
     </form>
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
+    <a href=""></a>
   </body>
 </html>
