--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <form class="search-form" id="search-form">
+   <header class="header">
+     <form class="search-form" id="search-form">
       <input
         type="text"
         name="searchQuery"
@@ -17,6 +18,7 @@
       />
       <button type="submit">Search</button>
     </form>
+  </header>
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
     <a href=""></a>
