--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,18 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-   <header class="header">
-     <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
-  </header>
+    <header class="header">
+      <form class="search-form" id="search-form">
+        <input
+          class="input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="submit" type="submit">Search</button>
+      </form>
+    </header>
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
     <a href=""></a>
