fixed infinity scroll

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
       </form>
     </header>
     <div class="gallery"></div>
-    <button type="button" class="load-more">Load more</button>
+    <div class="guard"></div>
+    <!-- <button type="button" class="load-more">Load more</button> -->
     <a href=""></a>
   </body>
 </html>
